--- a/frontend/view/owner/review.html
+++ b/frontend/view/owner/review.html
@@ -86,7 +86,7 @@
               <div
                 class="bg-light rounded d-flex align-items-center justify-content-between p-4"
               >
-                <i class="fa fa-solid fa-pen fa-3x text-primary"></i>
+                <i class="fa fa-solid fa-list fa-3x text-primary"></i>
                 <div class="ms-3">
                   <p class="mb-2">총 리뷰 수</p>
                   <h6 class="mb-0">{{totalReviewCount}}개</h6>
@@ -97,7 +97,8 @@
               <div
                 class="bg-light rounded d-flex align-items-center justify-content-between p-4"
               >
-                <i class="fa fa-regular fa-star fa-3x text-primary"></i>
+                <!-- <i class="fa fa-regular fa-star fa-3x text-primary"></i> -->
+                <i class="fa fa-regular fa-calculator fa-3x text-primary"></i>
                 <div class="ms-3">
                   <p class="mb-2">총 평점</p>
                   <h6 class="mb-0">{{totalAvgScore}}</h6>
@@ -237,7 +238,6 @@
                         삭제 요청 완료
                       </button>
                     </td>
-                    <!-- <td> <button type="button" class="btn btn-outline-danger m-2" data-bs-toggle="modal" data-bs-target="#myModal">DELETE</button></td> -->
                   </tr>
                 </tbody>
               </table>
