--- a/frontend/view/owner/reserve.html
+++ b/frontend/view/owner/reserve.html
@@ -77,16 +77,16 @@
             <div
               class="bg-light rounded d-flex align-items-center justify-content-between p-4"
             >
-              <i class="fa fa-chart-line fa-3x text-primary"></i>
-              <div class="ms-3">
-                <p class="mb-2">오늘 예약 수</p>
-                <h6 class="mb-0">{{totalTodayReserve}}개</h6>
-              </div>
-
               <i class="fa fa-chart-bar fa-3x text-primary"></i>
               <div class="ms-3">
                 <p class="mb-2">전체 예약 수</p>
                 <h6 class="mb-0">{{totalReserve}}개</h6>
+              </div>
+
+              <i class="fa fa-calendar-check fa-3x text-primary"></i>
+              <div class="ms-3">
+                <p class="mb-2">오늘 예약 수</p>
+                <h6 class="mb-0">{{totalTodayReserve}}개</h6>
               </div>
             </div>
           </div>
@@ -145,7 +145,6 @@
                 >
                   <thead>
                     <tr class="text-dark">
-                      <!-- <th scope="col"><input class="form-check-input" type="checkbox" /></th> -->
                       <th scope="col">예약 ID</th>
                       <th scope="col">가게 ID</th>
                       <th scope="col">고객명</th>
@@ -162,7 +161,6 @@
                       v-for="(reserve, index) in paginatedReserves"
                       :key="reserve.reserveId"
                     >
-                      <!-- <th scope="col"><input class="form-check-input" type="checkbox" /></th> -->
                       <td>{{ reserve.reserveId }}</td>
                       <td>{{ reserve.storeId }}</td>
                       <td>{{ reserve.name }}</td>
