마이페이지 내 정보 수정
마이페이지 내 정보 수정 view 개발

--- a/frontend/css/user/mainlogo.css
+++ b/frontend/css/user/mainlogo.css
@@ -35,3 +35,25 @@ a {
   position: absolute;
   bottom: 0;
 }
+
+.nav-link {
+  color: black !important;
+}
+.nav-link.active {
+  background-color: #ffc107 !important; /* warning 색상 */
+  color: #fff !important; /* 텍스트 색상 */
+}
+.dropdown-item.active {
+  background-color: #ffc107 !important; /* warning 색상 */
+  color: #fff !important; /* 텍스트 색상 */
+}
+
+.dropdown-item:hover {
+  background-color: #ffc107 !important; /* warning 색상 */
+  color: #fff !important; /* 텍스트 색상 */
+}
+
+.dropdown-item:active {
+  background-color: #ffc107 !important; /* warning 색상 */
+  color: #fff !important; /* 텍스트 색상 */
+}
