--- a/frontend/view/admin/srAdminUsers.html
+++ b/frontend/view/admin/srAdminUsers.html
@@ -169,8 +169,8 @@
                   <label for="userName" class="form-label">회원명</label>
                   <input type="text" name="userName" class="form-control mb-3" id="userName" v-model="userInfo.name" :placeholder="userInfo.name">
                   <!-- 이메일 -->
-                  <label for="email" class="form-label">이메일</label>
-                  <input type="text" name="email" class="form-control mb-3" id="email" v-model="userInfo.email" :placeholder="userInfo.email">
+                  <!-- <label for="email" class="form-label">이메일</label>
+                  <input type="text" name="email" class="form-control mb-3" id="email" v-model="userInfo.email" :placeholder="userInfo.email"> -->
                   <!-- 비밀번호 -->
                   <label for="password" class="form-label">비밀번호</label>
                   <input type="password" name="password" class="form-control mb-3" id="password" v-model="userInfo.password">
