--- a/frontend/view/user/searchStores.html
+++ b/frontend/view/user/searchStores.html
@@ -31,7 +31,7 @@
       rel="stylesheet"
     />
 
-    <link href="/css/user/filter.css" rel="stylesheet" />
+    <link href="/css/user/searchStores.css" rel="stylesheet" />
     <link href="/css/user/header.css" rel="stylesheet" />
   </head>
   <body>
@@ -112,6 +112,6 @@
     </div>
     <script src="/js/Footer.js"></script>
     <script src="/js/Header.js"></script>
-    <script src="/js/user/filter.js"></script>
+    <script src="/js/user/searchStores.js"></script>
   </body>
 </html>
