--- a/frontend/css/user/store.css
+++ b/frontend/css/user/store.css
@@ -36,9 +36,10 @@
 }
 .card img {
   width: 100%;
-  height: 70%;
+  height: 60%;
   object-fit: cover;
   transition: opacity 0.3s ease;
+  flex-shrink: 0;
 }
 .card:hover img {
   opacity: 0.3; /* 카드 이미지가 어두워짐 */
@@ -61,7 +62,7 @@
 .card-content {
   padding: 10px;
   margin-top: 15px;
-  height: 30%; /* 텍스트 영역도 카드의 절반을 차지 */
+  height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -79,6 +80,7 @@
   font-size: 12px;
   font-weight: bold;
   text-align: center;
+  text-overflow: ellipsis;
 }
 .arrow-btn {
   font-size: 25px;
