--- a/frontend/view/user/cart.html
+++ b/frontend/view/user/cart.html
@@ -35,111 +35,130 @@
   <body>
     <div id="app">
       <header-component></header-component>
-      <div class="container">
-        <div v-if="carts.length > 0" class="header-section mb-4">
-          <h1 style="text-align: center">결제</h1>
-          <button
-            @click="removeSelectedItems"
-            class="btn btn-danger"
-            :disabled="checkedCarts.length === 0"
-            style="float: right"
-          >
-            선택 삭제
-          </button>
-        </div>
 
-        <div v-for="(items, storeName) in groupedCarts" :key="storeName" class="store-section">
-          
-          <div class="store-name"> <img
-            :src="getStoreImage(items[0].url)"
-            alt="상점 이미지"
-            class="store-image"
-            v-if="getStoreImage(items[0].url)"
-            />  {{ storeName }}</div>
-            
-        
+      <!-- 메뉴 섹션 -->
+      <div class="container section-container menu-section">
+        <h2 class="section-title">
+          <i class="fa-solid fa-store"></i> 선택하신 식당 메뉴 정보
+        </h2>
+        <div v-for="(items, storeName) in groupedCarts" :key="storeName">
+          <div class="store-name">
+            <img
+              :src="getStoreImage(items[0].url)"
+              alt="상점 이미지"
+              class="store-image"
+              v-if="getStoreImage(items[0].url)"
+            />
+            {{ storeName }}
+          </div>
           <div class="cart-list">
             <div class="cart-item" v-for="cart in items" :key="cart.cartId">
               <div class="cart-image-wrapper">
-                <div class="cart-menuName">
-                  <input type="checkbox" v-model="checkedCarts" :value="cart" :disabled="cart.stock === 0" />
-                  {{ cart.menuName }}
-                </div>
-                
-                <!-- 메뉴 이미지 표시 -->
+                <div class="cart-menuName">{{ cart.menuName }}</div>
                 <img
                   :src="cart.menuImageUrl"
                   alt="메뉴 이미지"
                   class="cart-image"
                 />
               </div>
-              <div class="cart-details"><div v-if="items[0].availableCoupons.length" class="coupon-section">
-                <span>쿠폰 선택:</span>
-                <select v-model="selectedCoupon" @change="applyDiscount">
-                  <option v-for="coupon in items[0].availableCoupons" :key="coupon.couponId" :value="coupon">
-                    {{ coupon.couponName }}
-                  </option>
-                </select>
-              </div>
-                <div class="cart-price">{{ cart.price.toLocaleString() }}원</div>
+              <div class="cart-details">
+                <div class="cart-price">
+                  {{ cart.price.toLocaleString() }}원
+                </div>
                 <div class="cart-stock">개수: {{ cart.stock }}</div>
                 <div class="cart-totalPrice">
                   합계: {{ cart.totalPrice.toLocaleString() }}원
                 </div>
-                
-              </div>
-              <div class="cart-status">
-                <span v-if="cart.stock === 0" class="sold-out">장바구니가 비었습니다. 메뉴를 담아주세요</span>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="total-section">
-          <div>총 {{ totalCheckedCount }}건</div>
-          <div class="total-price">
-            총 금액: {{ totalCheckedPrice.toLocaleString() }}원
+          <div class="total-section">
+            총 금액: <strong>{{ totalPrice.toLocaleString() }}원</strong>
           </div>
-        </div>
-        <div class="reservation-button">
-          <button
-            @click="openReservationModal"
-            class="btn btn-primary btn-lg"
-            :disabled="!isReservationEnabled"
-          >
-            예약하기
-          </button>
         </div>
       </div>
 
-      <!-- 예약 모달 창 -->
-    
-    
-        <div v-if="isModalOpen" class="modal-backdrop">
-          <div class="modal-content">
-            <h5 class="modal-title">예약 정보 입력</h5>
-            <button @click="closeReservationModal" class="close-button">&times;</button>
-            <form @submit.prevent="makeReservation">
-              <div class="form-group">
-                <label for="name">예약자명</label>
-                <input type="text" v-model="reservationName" required />
-              </div>
-              <div class="form-group">
-                <label for="peopleCount">인원수</label>
-                <input type="number" v-model="peopleCount" min="1" required />
-              </div>
-              <div class="form-group">
-                <label for="note">메모</label>
-                <textarea v-model="note" rows="3"></textarea>
-              </div>
-              <button type="submit">예약</button>
-            </form>
-          </div>
+      <!-- 예약 정보 섹션 -->
+      <div class="container section-container reservation-section">
+        <h2 class="section-title">
+          <i class="fa-solid fa-user"></i> 예약 정보 입력
+        </h2>
+        <div class="form-group">
+          <label for="name">예약자명 *</label>
+          <input type="text" v-model="reservationName" required />
+        </div>
+        <div class="form-group">
+          <label for="peopleCount">인원수 *</label>
+          <input
+            type="number"
+            v-model="peopleCount"
+            :min="1"
+            :max="maxPeoplePerReserve"
+            required
+          />
+          <p
+            v-if="peopleCount < 1 || peopleCount > maxPeoplePerReserve"
+            class="error-message"
+          >
+            인원수는 1 이상, 최대 {{ maxPeoplePerReserve }}명까지 가능합니다.
+          </p>
+        </div>
+        <div class="form-group">
+          <label for="note">메모</label>
+          <textarea v-model="note" rows="3"></textarea>
+        </div>
+      </div>
+
+      <!-- 결제 섹션 -->
+      <div class="container section-container payment-section">
+        <h2 class="section-title">
+          <i class="fa-solid fa-credit-card"></i> 결제 수단
+        </h2>
+        <div v-if="globalCoupons.length" class="coupon-section mb-3">
+          <span>쿠폰 선택:</span>
+          <select v-model="selectedCoupon" @change="applyDiscount">
+            <option value="">- 쿠폰을 선택해주세요 -</option>
+            <option
+              v-for="coupon in globalCoupons"
+              :key="coupon.couponId"
+              :value="coupon"
+            >
+              {{ coupon.couponName }}
+            </option>
+          </select>
+        </div>
+        <div class="payment-option">
+          <button
+            :class="{'kakao-pay': true, 'selected': selectedPayment === 'kakaoPay'}"
+          >
+            <i class="fa-solid fa-comment"></i> PAY
+          </button>
+          <button
+            :class="{'meet-pay': true, 'selected': selectedPayment === 'meetPay'}"
+            @click="selectPayment('meetPay')"
+          >
+            <i class="fa-solid fa-handshake"></i>
+            만나서 결제
+          </button>
+        </div>
+        <div v-if="discountAmount > 0" class="discount-section">
+          할인 금액: -{{ discountAmount.toLocaleString() }}원
+        </div>
+
+        <div class="payment-button text-center mt-3">
+          <button
+            @click="makeReservation"
+            class="btn btn-yellow"
+            :disabled="peopleCount < 1 || peopleCount > maxPeoplePerReserve"
+          >
+            {{ finalTotalPrice.toLocaleString() }}원 결제하기
+          </button>
         </div>
       </div>
 
       <footer-component></footer-component>
     </div>
+
     <script src="/js/Footer.js"></script>
     <script src="/js/Header.js"></script>
     <script src="/js/user/cart.js"></script>
