마이페이지 구현
내 예약 내역 조회
즐겨찾기 목록
리뷰 내역 조회
TODO 리뷰 작성 및 수정기능

--- a/frontend/css/user/mainlogo.css
+++ b/frontend/css/user/mainlogo.css
@@ -40,20 +40,30 @@ a {
   color: black !important;
 }
 .nav-link.active {
-  background-color: #ffc107 !important; /* warning 색상 */
-  color: #fff !important; /* 텍스트 색상 */
+  background-color: #ffc107 !important;
+  color: #fff !important;
 }
 .dropdown-item.active {
-  background-color: #ffc107 !important; /* warning 색상 */
-  color: #fff !important; /* 텍스트 색상 */
+  background-color: #ffc107 !important;
+  color: #fff !important;
 }
 
 .dropdown-item:hover {
-  background-color: #ffc107 !important; /* warning 색상 */
-  color: #fff !important; /* 텍스트 색상 */
+  background-color: #ffc107 !important;
+  color: #fff !important;
 }
 
 .dropdown-item:active {
-  background-color: #ffc107 !important; /* warning 색상 */
-  color: #fff !important; /* 텍스트 색상 */
+  background-color: #ffc107 !important;
+  color: #fff !important;
+}
+
+.thumbnail_image {
+  width: 250px;
+  height: 180px;
+  margin:10px;
+}
+.thumbnail-container {
+  overflow-x: auto;
+  white-space: nowrap;
 }
