--- a/frontend/view/user/myPage.html
+++ b/frontend/view/user/myPage.html
@@ -17,6 +17,7 @@
       <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="/css/user/mainlogo.css" rel="stylesheet">
       <link href="/css/user/userLogin.css" rel="stylesheet">
+      <link href="/css/user/reviewModal.css" rel="stylesheet">
       <!-- 자바스크립트 -->
        <script src="https://kit.fontawesome.com/9ebc532cee.js" crossorigin="anonymous"></script>
       <script src="/node_modules/jquery/dist/jquery.min.js"></script>
@@ -32,9 +33,12 @@
       <script src="/node_modules/axios/dist/axios.min.js"></script>
       <script src="/js/axiosSetting.js"></script>
       <script src="/js/user/main.js"></script>
+      <style>
+        li {
+          list-style: none;
+        }
+      </style>
   </head>
-  <script>
-  </script>
 <body>
   <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
     <div class="spinner-grow text-warning" role="status"></div>
@@ -63,12 +67,12 @@
                 </li>
                 <li class="nav-item">
                   <a :class="['nav-link', isActive('bookMark')]" href="#" @click="changeTab('bookMark')">
-                    <i class="bi bi-star-fill"></i> 즐겨찾기 목록
+                    <i class="bi bi-star-fill"></i> 즐겨찾기 목록 ({{bookMarkListCount}})
                   </a>
                 </li>
                 <li class="nav-item">
                   <a :class="['nav-link', isActive('reviewHistory')]" href="#" @click="changeTab('reviewHistory')">
-                    <i class="bi bi-chat-text-fill"></i> 리뷰 내역 조회
+                    <i class="bi bi-chat-text-fill"></i> 리뷰 내역 조회 ({{reviewHistoryCount}})
                   </a>
                 </li>
               </ul>
@@ -121,47 +125,248 @@
           <!-- 예약 내역 시작 -->
           <div class="col" v-if="currentPage == 'reserveHistory'">
             <h3>예약 내역</h3>
-            <div class="row">
-              <div class="col-2 text-center">
-                <img src="/assets/defaultUser.jpg" class="dropdown-toggle rounded-circle border w-100">
-                <button class="btn btn-light border mt-2">프로필 변경</button>
+            <div class="d-flex justify-content-start">
+              <input type="radio" class="btn-check" name="status" value="plan" id="plan" v-model="selectedReserveStatus">
+              <label class="btn btn-outline-primary m-3" for="plan">방문예정 {{ planReserveHistoryData.length }}</label>
+              <input type="radio" class="btn-check" name="status" value="complete" id="complete" v-model="selectedReserveStatus">
+              <label class="btn btn-outline-success m-3" for="complete">방문완료 {{ completeReserveHistoryData.length }}</label>
+              <input type="radio" class="btn-check" name="status" value="cancel" id="cancel" v-model="selectedReserveStatus">
+              <label class="btn btn-outline-danger m-3" for="cancel">취소 {{ cancelReserveHistoryData.length }}</label>
+            </div>
+            <div class="container" v-if="selectedReserveStatus == 'plan'">
+              <div class="card w-100 h-25 mb-3" v-for="reserve in planReserveHistoryData" :key="reserve.reserveId">
+                <div class="card-header">
+                  <label class="list-group-item">
+                    {{ statusCodeValue(reserve.statusCodeId) }} 
+                  </label>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <div v-if="reserve.storeImages.length > 0" class="col-3">
+                      <img :src="reserve.storeImages[0].url" style="width: 100%; height: 90%;">
+                    </div>
+                    <div v-else class="col-3">
+                      <img src="/assets/no_store_image.jpg" style="width: 100%; height: 90%;">
+                    </div>
+                    <div class="col">
+                      <ul>
+                        <li><a :href="'/view/user/storeInfo?storeId='+reserve.storeId"><h4>{{ reserve.storeName }}</h4></a></li>
+                        <li><label v-for="(category, index) in reserve.categories" :key="category.categoryId">
+                          {{ category.storeCategoryName }}<span v-if="index !== reserve.categories.length - 1">&nbsp;·&nbsp;</span></label>
+                        </li>
+                        <li>
+                          <span class="text-warning">{{ dateFormat(reserve.reserveTime) }}</span>
+                        </li>
+                        <li>
+                          <span>{{ reserve.address }}</span>
+                        </li>
+                        <li>
+                          <span>방문자명 : {{ reserve.name }}, {{ reserve.people }} 명</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col">
-
+              <div v-if="planReserveHistoryData.length == 0">
+                <p>예약 내역이 없습니다. 예약할 식당을 찾아보세요</p>
+                <a href="/view/stores"><p>식당 찾으러 가기</p></a>
               </div>
             </div>
+
+            <div class="container" v-if="selectedReserveStatus == 'complete'">
+              <div class="card w-100 h-25 mb-3" v-for="reserve in completeReserveHistoryData" :key="reserve.reserveId">
+                <div class="card-header">
+                  <label class="list-group-item">
+                    {{ statusCodeValue(reserve.statusCodeId) }} 
+                  </label>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <div v-if="reserve.storeImages.length > 0" class="col-3">
+                      <img :src="reserve.storeImages[0].url" style="width: 100%; height: 90%;">
+                    </div>
+                    <div v-else class="col-3">
+                      <img src="/assets/no_store_image.jpg" style="width: 100%; height: 90%;">
+                    </div>
+                    <div class="col">
+                      <ul>
+                        <li><a :href="'/view/user/storeInfo?storeId='+reserve.storeId"><h4>{{ reserve.storeName }}</h4></a></li>
+                        <li><label v-for="(category, index) in reserve.categories" :key="category.categoryId">
+                          {{ category.storeCategoryName }}<span v-if="index !== reserve.categories.length - 1">&nbsp;·&nbsp;</span></label>
+                        </li>
+                        <li>
+                          <span class="text-warning">{{ dateFormat(reserve.reserveTime) }}</span>
+                        </li>
+                        <li>
+                          <span>{{ reserve.address }}</span>
+                        </li>
+                        <li>
+                          <span>방문자명 : {{ reserve.name }}, {{ reserve.people }} 명</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <button class="btn btn-outline-warning" v-if="reserve.statusCodeId == 4">리뷰 작성하기</button>
+                      <button class="btn btn-secondary" v-if="reserve.statusCodeId == 5" disabled>리뷰 작성 완료</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div v-if="completeReserveHistoryData.length == 0">
+                <p>예약 내역이 없습니다. 예약할 식당을 찾아보세요</p>
+                <a href="/view/stores"><p>식당 찾으러 가기</p></a>
+              </div>
+            </div>
+
+            <div class="container" v-if="selectedReserveStatus == 'cancel'">
+              <div class="card w-100 h-25 mb-3" v-for="reserve in cancelReserveHistoryData" :key="reserve.reserveId">
+                <div class="card-header">
+                  <label class="list-group-item">
+                    {{ statusCodeValue(reserve.statusCodeId) }} 
+                  </label>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <div v-if="reserve.storeImages.length > 0" class="col-3">
+                      <img :src="reserve.storeImages[0].url" style="width: 100%; height: 90%;">
+                    </div>
+                    <div v-else class="col-3">
+                      <img src="/assets/no_store_image.jpg" style="width: 100%; height: 90%;">
+                    </div>
+                    <div class="col">
+                      <ul>
+                        <li><a :href="'/view/user/storeInfo?storeId='+reserve.storeId"><h4>{{ reserve.storeName }}</h4></a></li>
+                        <li><label v-for="(category, index) in reserve.categories" :key="category.categoryId">
+                          {{ category.storeCategoryName }}<span v-if="index !== reserve.categories.length - 1">&nbsp;·&nbsp;</span></label>
+                        </li>
+                        <li>
+                          <span class="text-warning">{{ dateFormat(reserve.reserveTime) }}</span>
+                        </li>
+                        <li>
+                          <span>{{ reserve.address }}</span>
+                        </li>
+                        <li>
+                          <span>방문자명 : {{ reserve.name }}, {{ reserve.people }} 명</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <button class="btn btn-outline-warning" v-if="reserve.statusCodeId == 4" @click="changeTab('reviewInsertOrUpdate')">리뷰 작성하기</button>
+                      <button class="btn btn-secondary" v-if="reserve.statusCodeId == 5" disabled>리뷰 작성 완료</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div v-if="cancelReserveHistoryData.length == 0">
+                <p>취소 내역이 없습니다</p>
+              </div>
+            </div>
+
           </div>
           <!-- 예약 내역 종료 -->
-          <!-- 내정보 시작 -->
+          <!-- 즐겨찾는 매장 -->
           <div class="col" v-if="currentPage == 'bookMark'">
             <h3>즐겨찾는 매장</h3>
             <div class="row">
-              <div class="col-2 text-center">
-                <img src="/assets/defaultUser.jpg" class="dropdown-toggle rounded-circle border w-100">
-                <button class="btn btn-light border mt-2">프로필 변경</button>
-              </div>
               <div class="col">
-
+                <div class="container">
+                  <div class="card w-100 h-25 mb-3" v-for="bookmark in bookMarkListData" :key="bookmark.bookmarkDto.bookMarkId">
+                    <div class="card-body">
+                      <div class="row">
+                        <div v-if="bookmark.url != null" class="col-3">
+                          <img :src="bookmark.url" style="width: 90%; height: 90%;">
+                        </div>
+                        <div v-else class="col-3">
+                          <img src="/assets/no_store_image.jpg" style="width: 90%; height: 90%;">
+                        </div>
+                        <div class="col">
+                          <ul>
+                            <li><a :href="'/view/user/storeInfo?storeId='+bookmark.bookmarkDto.storeId"><h4>{{ bookmark.storeName }}</h4></a></li>
+                            <li><label>
+                              {{ bookmark.categoryName }}
+                              </label>
+                            </li>
+                            <li>
+                              <i class="fas fa-star text-warning"></i> {{ bookmark.reviewScore.toFixed(1) }} ({{ bookmark.reviewCount }})
+                            </li>
+                            <li>
+                              <span>{{ bookmark.description }}</span>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div v-if="bookMarkListData.length == 0">
+                    <p>즐겨찾기한 식당이 없습니다. 즐겨찾고 싶은 식당을 찾아보세요</p>
+                    <a href="/view/stores"><p>식당 찾으러 가기</p></a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
           
           <div class="col" v-if="currentPage == 'reviewHistory'">
-            <h3>리뷰 내역</h3>
-            <div class="row">
-              <div class="col-2 text-center">
-                <img src="/assets/defaultUser.jpg" class="dropdown-toggle rounded-circle border w-100">
-                <button class="btn btn-light border mt-2">프로필 변경</button>
-              </div>
-              <div class="col">
-
-              </div>
+            <h3>내가 작성한 리뷰 {{ reviewHistoryCount }}건</h3>
+              <div class="card w-100 mb-3" v-for="(review, index) in reviewHistoryData.reviewData" :key="review.reviewId">
+                <div class="card-header border">
+                  <div>
+                    <div class="mt-3">
+                      <a :href="'/view/user/storeInfo?storeId='+review.storeId"><h3>{{ review.storeName }}</h3></a>
+                    </div>
+                    <div>
+                      <label><i v-for="sc in review.score" class="fas fa-star text-warning"></i> | {{dateFormat(review.dateTime) }}</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                      <div class="col">
+                        <div class="thumbnail-container">
+                          <img v-for="(image, index) in review.reviewImages" @click="openReviewModal(review.reviewImages, index)" :src="image.url" class="thumbnail_image" alt="Sample Image" data-bs-toggle="modal" data-bs-target="#imageModal">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mt-4">
+                      <textarea class="form-control" style="height: 150px; overflow: hidden; border: none; resize: none;" readonly v-model="review.content"></textarea>
+                    </div>
+                    <p class="text-center">
+                      <button class="btn btn-outline-primary text-center form-control" @click="changeTab('reviewInsertOrUpdate', review)">리뷰 수정하기</button>
+                    </p>
+                </div>
             </div>
+          </div>
+          <!-- 리뷰수정 or 생성탭 -->
+          <div class="col" v-if="currentPage == 'reviewInsertOrUpdate'">
+            
           </div>
         </div>
       </div>
     </div>
     <footer-component></footer-component>
+
+    <!-- 리뷰 사진 모달 -->
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <img :src="reviewImageLists[currentImageIndex].url" class="img-fluid" alt="Enlarged Image">
+            <div class="mt-3">
+              <button v-if="reviewImageLists.length > 1" @click="controlImages('prev')" class="btn btn-custom">이전</button>
+              <button v-if="reviewImageLists.length > 1" @click="controlImages('next')" class="btn btn-custom">다음</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 <script src="/js/user/component.js"></script>
 <script src="/js/user/myPage.js"></script>
